# rukh

./: .gitignore  package-lock.json  package.json  tailwind.config.ts
api/: Cargo.toml
api/migration/src/: m20220101_000001_create_table.rs
api/src/: main.rs
api/src/db/: books.rs  bootstrap.rs  mod.rs  models.rs  moves.rs
api/src/entities/: books.rs  mod.rs  moves.rs  prelude.rs
api/src/handlers/: books.rs  mod.rs  moves.rs  types.rs  utils.rs
app/: globals.css  layout.tsx  page.tsx
app/board/[slug]/: board-state.tsx  confirm-move.tsx  context.ts  main.tsx  page.tsx
app/board/edit/[slug]/: board-state.tsx  confirm-move.tsx  editor.tsx  main.tsx  page.tsx
app/board/prac/[slug]/: board.tsx  page.tsx
app/board/prac/[slug]/feedback/: correct.tsx  feedback.tsx  wrong.tsx
app/components/: wysiwyg.tsx
app/components/chessboard/styles/: style.css
app/components/wysiwyg/: wysiwyg.tsx
app/home/: index.tsx
app/home/books-list/: index.tsx
app/home/create-book-modal/: index.tsx
src/services/: base.ts  book.tsx  db.ts  move.tsx
ui/app/: layout.tsx
ui/app/board/edit/[slug]/: board-state.tsx  confirm-move.tsx  context.ts  editor.tsx  main.tsx  page.tsx
ui/app/board/prac/[slug]/: board.tsx  context.tsx  (+1 more)
ui/app/components/chessboard/: index.tsx
ui/app/components/ui/: announce.tsx
ui/app/components/wysiwyg/: style.css  wysiwyg.tsx
ui/app/home/: index.tsx
ui/app/home/books-list/: index.tsx
ui/app/home/create-book-modal/: index.tsx
ui/src/contexts/: websockets.tsx
ui/src/services/: base.ts  book.tsx  db.ts  event-emitter.ts  move.tsx
(+4 files in other folders)
