[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
dotenvy = "0.15.7"
serde = {version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.137"
futures = "0.3.31"
