[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
dotenvy = "0.15.7"
serde = {version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.137"
futures = "0.3.31"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
sea-orm = { version = "1.1.4" , features = ["sqlx-sqlite" , "runtime-tokio-native-tls"] }
migration = { path = "./migration" }
